tests/semantic/fail/nil-6.tiger
let
	var a := ""
in
	a = nil
end
